Finish the migration: Gateway, Authorization Server, and two modules retired
The remaining four modules were the ones that could not be version-bumped.
Every module now runs on Spring Boot 3.5, Spring Cloud 2025.0 and Java 21, so
the JDK 8 CI job is gone and the reactor builds as one thing again.

shoppingcart-ui: Zuul 1 to Spring Cloud Gateway
-----------------------------------------------
Zuul 1 was dropped from Spring Cloud in 2020. The MVC flavour of Gateway is
the one that can also serve the React console from the same jar; the reactive
flavour would put a WebFlux app in front of a servlet static handler.

Zuul's `zuul.prefix=/api` plus its Eureka route locator meant every registered
service was reachable through the edge whether or not anyone decided it should
be. The three routes the console actually calls are written down now, and a
test asserts that an unrouted service 404s at the edge instead of proxying.

AuthHeaderFilter was a ZuulFilter calling ctx.addZuulRequestHeader. It is a
plain servlet filter wrapping the request now: Gateway MVC builds the outgoing
request from the incoming HttpServletRequest, so the header propagates without
any gateway-specific API, and it keeps working if the gateway is swapped again.

GatewayRoutingTest drives real HTTP through the gateway to a MockWebServer
registered as catalog-service, so the shipped route definitions are what gets
exercised rather than a test-only copy. It immediately earned its keep: the
routes were written with StripPrefix=2 and the backend received
/catalog-service/api/products. The two halves of a route treat the servlet
context path differently - the Path predicate matches the path within the
application, with /ui already removed, while StripPrefix counts segments on
the full request URI where /ui is still present. StripPrefix=3 is correct and
the test now pins the exact path the backend sees.

oauth2-server: Spring Security OAuth2 to Spring Authorization Server
-------------------------------------